# eta-examples

./: .gitignore  LICENSE  README.md  circle.yml
.circleci/: config.yaml  config.yml
0-hello-ghcvm/: README.md
1-ffi-generics/: LICENSE  README.md  java-ffi-generics.cabal
1-ffi-generics/src/: Collections.hs  Main.hs
1.5-ffi-generics/: README.md
1.5-ffi-generics/src/: Collections.hs  Main.hs
2-javafx/: README.md  eta-javafx.cabal
2-javafx/src/: CalculatorApp.hs  JavaFX.hs  Main.hs  SampleApp.hs
2-javafx/src/JavaFX/: Core.hs  Methods.hs  Types.hs
2-javafx/src/src/: Main.hs
3-spark/: README.md  eta-spark.cabal
3-spark/src/: Main.hs
3-spark/src/Spark/: Methods.hs  Types.hs
4-matrix/: README.md  matrix-ex.cabal  matrix.cabal
4-matrix/src/: Main.hs
5-lens/: README.md  lens-ex.cabal
5-lens/src/: Main.hs
scripts/: eta-install.sh
