name:                eta-javafx
version:             0.1.0.0
synopsis:            A JavaFX example in Eta
description:         This is a project that demonstrates how to integrate with Java in Eta
license:             Apache-2.0
license-file:        LICENSE
author:              Rahul Muttineni
maintainer:          rahulmutt@gmail.com
copyright:           Copyright (c) Rahul Muttineni 2016
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

source-repository head
    type: git
    location: https://github.com/typelead/eta-javafx.git

executable eta-javafx
  main-is:             Main.hs
  other-modules:       SampleApp
                     , JavaFX
                     , JavaFX.Core
                     , JavaFX.Types
                     , JavaFX.Methods
  build-depends:       base >=4.8 && <4.9
  hs-source-dirs:      src
  default-language:    Haskell2010