name:                matrix-ex
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Rahul Muttineni
maintainer:          rahulmutt@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable matrix-ex
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9
                     , singletons <= 2.0.1
                     , matrix
  hs-source-dirs:      src
  default-language:    Haskell2010
