name:                lens-ex
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              Rahul Muttineni
maintainer:          rahulmutt@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable lens-ex
  main-is:             Main.hs
  build-depends:       base
                     , aeson
                     , aeson-pretty
                     , bytestring
                     , lens-aeson
                     , lens
  hs-source-dirs:      src
  default-extensions: OverloadedStrings
  default-language:    Haskell2010
